changes KittenStatistics & KittenStatisticsFunctional & KittenStatisticsFunctionalTest